# parsing

./: .flake8  .git-blame-ignore-revs  .gitignore  .travis.yml  LICENSE  MANIFEST.in  README  README.rst  pyproject.toml  setup.py  tox.ini
.github/workflows/: release.yml  test.yml
parsing/: __init__.py  _version.py  ast.py  ast_objs.py  automaton.py  class_spec.py  errors.py  glrparser.py  grammar.py  interfaces.py  introspection.py  lrparser.py  mod_adapt.py  module_spec.py  ruledsl.py  scanner.py
parsing/tests/: __init__.py  __main__.py  test_basic.py  test_codestyle.py
parsing/tests/specs/: a.py  b.py  d.py  h.py  i.py
